fix: update section navigation to be row on smaller devices

--- a/src/pages/applications.module.css
+++ b/src/pages/applications.module.css
@@ -51,3 +51,36 @@
   bottom: 0;
   left: 50%;
 }
+
+@media (max-width: 900px) { 
+  .list {
+    margin: 0 auto;
+    padding: 0;
+    counter-reset: list-c;
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    column-gap: 20px;
+  }
+  .listItem, .listItemInactive {
+    display: inline-grid;
+    counter-increment: list-c;
+    padding-left: 0px;
+    padding-top: 18px;
+    position: relative;
+  }
+  .listItem:before, .listItemInactive:before {
+    content: counter(list-c) '.';
+    display: inline-grid;
+    text-align: center;
+    position: absolute;
+    left: 0px;
+  }
+}
+
+
+@media (max-width: 389px) { 
+  .list {
+    grid-template-columns: repeat(2, 100px);
+  }
+}
+
